--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,6 @@ h6 {
 }
 
 .button--white {
-  padding: 1rem 4.125rem;
   border: 0.125rem solid #FFFFFF;
   border-radius: 0.25rem;
   font-size: 1.75rem;
@@ -402,14 +401,30 @@ textarea.input {
      object-fit: contain;
 }
 
+.page {
+  position: relative;
+}
+
 .header {
   position: fixed;
+  z-index: 50;
   width: 100%;
-  height: 100%;
   top: 0;
   left: 0;
-  padding: 1.1875rem 0rem;
-  background-color: rgba(255, 255, 255, 0.7);
+  padding: 1.25rem 0rem;
+  background-color: rgb(255, 255, 255);
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+.header._header-scroll {
+  position: fixed;
+  top: -200%;
+}
+
+.header._header-show {
+  top: 0;
 }
 
 .header__container {
@@ -538,7 +553,7 @@ textarea.input {
 }
 
 .search-header__btn:active {
-  background-color: #DBDBDB;
+  background-color: rgba(195, 219, 248, 0.7);
 }
 
 .search-header__result {
@@ -583,7 +598,6 @@ textarea.input {
       -ms-flex-align: center;
           align-items: center;
   line-height: 1.2222222222;
-  color: #1F1F1F;
   position: relative;
   z-index: 6;
   -webkit-transition: all 0.3s ease 0s;
@@ -685,7 +699,6 @@ textarea.input {
   font-weight: 500;
   font-size: 1.25rem;
   line-height: 1.2;
-  color: #1F1F1F;
   position: relative;
 }
 
@@ -710,9 +723,93 @@ textarea.input {
   display: none;
 }
 
+.main__container {
+  position: relative;
+}
+
+.main__image {
+  position: relative;
+  top: 0;
+  right: 0;
+  width: 100%;
+}
+
+.main__image::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: -webkit-gradient(linear, left top, right top, color-stop(-3.72%, #272727), color-stop(53.35%, rgba(17, 17, 17, 0)));
+  background: -o-linear-gradient(left, #272727 -3.72%, rgba(17, 17, 17, 0) 53.35%);
+  background: linear-gradient(90deg, #272727 -3.72%, rgba(17, 17, 17, 0) 53.35%);
+}
+
+.main__block {
+  position: absolute;
+  z-index: 2;
+  left: 6%;
+  bottom: 25%;
+}
+
+.main__title {
+  font-weight: 700;
+  line-height: 1.2166666667;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+.main__subtitle {
+  font-weight: 500;
+  line-height: 1.2;
+  color: #FFFFFF;
+}
+
+@media (min-width: 47.99875em) {
+  .main__image img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+
 @media (min-width: 108.75em) {
+  .button--white {
+    padding-top: 1rem;
+  }
+
+  .button--white {
+    padding-right: 4.125rem;
+  }
+
+  .button--white {
+    padding-bottom: 1rem;
+  }
+
+  .button--white {
+    padding-left: 4.125rem;
+  }
+
+  .button--white {
+    font-size: 1.75rem;
+  }
+
   .action-header__contact {
     font-size: 1.125rem;
+  }
+
+  .main__title {
+    margin-bottom: 1.25rem;
+  }
+
+  .main__subtitle {
+    font-size: 1.25rem;
+  }
+
+  .main__subtitle:not(:last-child) {
+    margin-bottom: 3.75rem;
   }
 }
 
@@ -723,6 +820,30 @@ textarea.input {
 
   .top-header__action {
     gap: 4.9375rem;
+  }
+
+  .main__block {
+    width: 53.75rem;
+  }
+
+  .main__title {
+    font-size: 3.75rem;
+  }
+}
+
+@media (max-width: 64em) {
+  .main__block {
+    bottom: 10%;
+  }
+}
+
+@media (max-width: 62em) {
+  .main__block {
+    width: 30rem;
+  }
+
+  .main__title {
+    font-size: 2rem;
   }
 }
 
@@ -737,8 +858,40 @@ textarea.input {
 }
 
 @media (max-width: 20em) {
+  .button--white {
+    padding-top: 0.875rem;
+  }
+
+  .button--white {
+    padding-right: 2.75rem;
+  }
+
+  .button--white {
+    padding-bottom: 0.875rem;
+  }
+
+  .button--white {
+    padding-left: 2.75rem;
+  }
+
+  .button--white {
+    font-size: 1.125rem;
+  }
+
   .action-header__contact {
     font-size: 1rem;
+  }
+
+  .main__title {
+    margin-bottom: 0.625rem;
+  }
+
+  .main__subtitle {
+    font-size: 1rem;
+  }
+
+  .main__subtitle:not(:last-child) {
+    margin-bottom: 2.5rem;
   }
 }
 
@@ -775,12 +928,17 @@ textarea.input {
     right: 0;
   }
 
+  .action-header__phone::after {
+    background-color: #FFFFFF;
+  }
+
   .menu {
     position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
     right: -100%;
+    background-color: #FFFFFF;
     overflow: auto;
     padding: 6.25rem 2.5rem 7.5rem 0.9375rem;
     -webkit-transition: all 0.8s ease 0s;
@@ -897,17 +1055,52 @@ textarea.input {
         -ms-transform: rotate(45deg);
             transform: rotate(45deg);
   }
+
+  .main__container {
+    padding: 0;
+  }
+
+  .main__image {
+    height: 100vh;
+  }
+
+  .main__block {
+    max-width: 30rem;
+  }
+
+  .main__title {
+    font-size: 1.5625rem;
+  }
 }
 
 @media (max-width: 47.99875em) and (max-width: 20em) {
   .menu__link {
     font-size: 1.375rem;
   }
+
+  .main__block {
+    left: 0.625rem;
+  }
 }
 
 @media (max-width: 47.99875em) and (any-hover: none) {
   .icon-menu {
     cursor: default;
+  }
+}
+
+@media screen and (max-width: 47.99875em) {
+  .main__image img {
+    width: auto;
+    height: 100vh;
+    -o-object-fit: cover;
+       object-fit: cover;
+    position: absolute;
+    top: 50%;
+    left: 93%;
+    -webkit-transform: translate(-93%, -50%);
+        -ms-transform: translate(-93%, -50%);
+            transform: translate(-93%, -50%);
   }
 }
 
@@ -940,6 +1133,122 @@ textarea.input {
   }
 }
 
+@media (max-width: 31.25em) {
+  .main__block {
+    width: 100%;
+  }
+}
+
+@media (min-width: 20em) and (max-width: 108.75em) {
+@supports (padding-top: clamp( 0.875rem , 0.8468309859rem  +  0.1408450704vw , 1rem )) {
+    .button--white {
+      padding-top: clamp( 0.875rem , 0.8468309859rem  +  0.1408450704vw , 1rem );
+    }
+}
+
+@supports not (padding-top: clamp( 0.875rem , 0.8468309859rem  +  0.1408450704vw , 1rem )) {
+    .button--white {
+      padding-top: calc(0.875rem + 0.125 * (100vw - 20rem) / 88.75);
+    }
+}
+
+@supports (padding-right: clamp( 2.75rem , 2.4401408451rem  +  1.5492957746vw , 4.125rem )) {
+    .button--white {
+      padding-right: clamp( 2.75rem , 2.4401408451rem  +  1.5492957746vw , 4.125rem );
+    }
+}
+
+@supports not (padding-right: clamp( 2.75rem , 2.4401408451rem  +  1.5492957746vw , 4.125rem )) {
+    .button--white {
+      padding-right: calc(2.75rem + 1.375 * (100vw - 20rem) / 88.75);
+    }
+}
+
+@supports (padding-bottom: clamp( 0.875rem , 0.8468309859rem  +  0.1408450704vw , 1rem )) {
+    .button--white {
+      padding-bottom: clamp( 0.875rem , 0.8468309859rem  +  0.1408450704vw , 1rem );
+    }
+}
+
+@supports not (padding-bottom: clamp( 0.875rem , 0.8468309859rem  +  0.1408450704vw , 1rem )) {
+    .button--white {
+      padding-bottom: calc(0.875rem + 0.125 * (100vw - 20rem) / 88.75);
+    }
+}
+
+@supports (padding-left: clamp( 2.75rem , 2.4401408451rem  +  1.5492957746vw , 4.125rem )) {
+    .button--white {
+      padding-left: clamp( 2.75rem , 2.4401408451rem  +  1.5492957746vw , 4.125rem );
+    }
+}
+
+@supports not (padding-left: clamp( 2.75rem , 2.4401408451rem  +  1.5492957746vw , 4.125rem )) {
+    .button--white {
+      padding-left: calc(2.75rem + 1.375 * (100vw - 20rem) / 88.75);
+    }
+}
+
+@supports (font-size: clamp( 1.125rem , 0.9841549296rem  +  0.7042253521vw , 1.75rem )) {
+    .button--white {
+      font-size: clamp( 1.125rem , 0.9841549296rem  +  0.7042253521vw , 1.75rem );
+    }
+}
+
+@supports not (font-size: clamp( 1.125rem , 0.9841549296rem  +  0.7042253521vw , 1.75rem )) {
+    .button--white {
+      font-size: calc(1.125rem + 0.625 * (100vw - 20rem) / 88.75);
+    }
+}
+
+@supports (font-size: clamp( 1rem , 0.9718309859rem  +  0.1408450704vw , 1.125rem )) {
+    .action-header__contact {
+      font-size: clamp( 1rem , 0.9718309859rem  +  0.1408450704vw , 1.125rem );
+    }
+}
+
+@supports not (font-size: clamp( 1rem , 0.9718309859rem  +  0.1408450704vw , 1.125rem )) {
+    .action-header__contact {
+      font-size: calc(1rem + 0.125 * (100vw - 20rem) / 88.75);
+    }
+}
+
+@supports (margin-bottom: clamp( 0.625rem , 0.4841549296rem  +  0.7042253521vw , 1.25rem )) {
+    .main__title {
+      margin-bottom: clamp( 0.625rem , 0.4841549296rem  +  0.7042253521vw , 1.25rem );
+    }
+}
+
+@supports not (margin-bottom: clamp( 0.625rem , 0.4841549296rem  +  0.7042253521vw , 1.25rem )) {
+    .main__title {
+      margin-bottom: calc(0.625rem + 0.625 * (100vw - 20rem) / 88.75);
+    }
+}
+
+@supports (font-size: clamp( 1rem , 0.9436619718rem  +  0.2816901408vw , 1.25rem )) {
+    .main__subtitle {
+      font-size: clamp( 1rem , 0.9436619718rem  +  0.2816901408vw , 1.25rem );
+    }
+}
+
+@supports not (font-size: clamp( 1rem , 0.9436619718rem  +  0.2816901408vw , 1.25rem )) {
+    .main__subtitle {
+      font-size: calc(1rem + 0.25 * (100vw - 20rem) / 88.75);
+    }
+}
+
+@supports (margin-bottom: clamp( 2.5rem , 2.2183098592rem  +  1.4084507042vw , 3.75rem )) {
+    .main__subtitle:not(:last-child) {
+      margin-bottom: clamp( 2.5rem , 2.2183098592rem  +  1.4084507042vw , 3.75rem );
+    }
+}
+
+@supports not (margin-bottom: clamp( 2.5rem , 2.2183098592rem  +  1.4084507042vw , 3.75rem )) {
+    .main__subtitle:not(:last-child) {
+      margin-bottom: calc(2.5rem + 1.25 * (100vw - 20rem) / 88.75);
+    }
+}
+}
+
 @media (min-width: 48em) and (max-width: 120em) {
 @supports (gap: clamp( 1.25rem , -5.5416666667rem  +  14.1493055556vw , 11.4375rem )) {
     .header__top {
@@ -966,20 +1275,6 @@ textarea.input {
 }
 }
 
-@media (min-width: 20em) and (max-width: 108.75em) {
-@supports (font-size: clamp( 1rem , 0.9718309859rem  +  0.1408450704vw , 1.125rem )) {
-    .action-header__contact {
-      font-size: clamp( 1rem , 0.9718309859rem  +  0.1408450704vw , 1.125rem );
-    }
-}
-
-@supports not (font-size: clamp( 1rem , 0.9718309859rem  +  0.1408450704vw , 1.125rem )) {
-    .action-header__contact {
-      font-size: calc(1rem + 0.125 * (100vw - 20rem) / 88.75);
-    }
-}
-}
-
 @media (min-width: 20em) and (max-width: 48em) {
 @supports (gap: clamp( 1.875rem , 1.4285714286rem  +  2.2321428571vw , 2.5rem )) {
     .menu__list {
@@ -998,6 +1293,10 @@ textarea.input {
   .menu__link {
     font-size: 2rem;
   }
+
+  .main__block {
+    left: 1.25rem;
+  }
 }
 
 @media (max-width: 47.99875em) and (min-width: 20em) and (max-width: 108.75em) {
@@ -1010,6 +1309,44 @@ textarea.input {
 @supports not (font-size: clamp( 1.375rem , 1.2341549296rem  +  0.7042253521vw , 2rem )) {
     .menu__link {
       font-size: calc(1.375rem + 0.625 * (100vw - 20rem) / 88.75);
+    }
+}
+
+@supports (left: clamp( 0.625rem , 0.4841549296rem  +  0.7042253521vw , 1.25rem )) {
+    .main__block {
+      left: clamp( 0.625rem , 0.4841549296rem  +  0.7042253521vw , 1.25rem );
+    }
+}
+
+@supports not (left: clamp( 0.625rem , 0.4841549296rem  +  0.7042253521vw , 1.25rem )) {
+    .main__block {
+      left: calc(0.625rem + 0.625 * (100vw - 20rem) / 88.75);
+    }
+}
+}
+
+@media (min-width: 62em) and (max-width: 120em) {
+@supports (width: clamp( 30rem , 4.6120689655rem  +  40.9482758621vw , 53.75rem )) {
+    .main__block {
+      width: clamp( 30rem , 4.6120689655rem  +  40.9482758621vw , 53.75rem );
+    }
+}
+
+@supports not (width: clamp( 30rem , 4.6120689655rem  +  40.9482758621vw , 53.75rem )) {
+    .main__block {
+      width: calc(30rem + 23.75 * (100vw - 62rem) / 58);
+    }
+}
+
+@supports (font-size: clamp( 2rem , 0.1293103448rem  +  3.0172413793vw , 3.75rem )) {
+    .main__title {
+      font-size: clamp( 2rem , 0.1293103448rem  +  3.0172413793vw , 3.75rem );
+    }
+}
+
+@supports not (font-size: clamp( 2rem , 0.1293103448rem  +  3.0172413793vw , 3.75rem )) {
+    .main__title {
+      font-size: calc(2rem + 1.75 * (100vw - 62rem) / 58);
     }
 }
 }
@@ -1041,7 +1378,7 @@ textarea.input {
   }
 
   .search-header__btn:hover {
-    background-color: #F2F2F2;
+    background-color: rgba(195, 219, 248, 0.5);
   }
 
   .search-header__result li:hover {
@@ -1054,7 +1391,7 @@ textarea.input {
   }
 
   .action-header__cart:hover {
-    background-color: rgba(195, 219, 248, 0.5019607843);
+    background-color: rgba(195, 219, 248, 0.7);
   }
 
   .menu__link:hover::before {
